public interface Linable {
    public void setPosition(int position);
    public int getPosition();
    public int getValue();
}
